<resources>
    <string name="app_name">LoL Bot</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="match_summoner_spell_1">Match Summoner Spell 1</string>
    <string name="match_summoner_spell_2">Match Summoner Spell 2</string>
    <string name="match_profile_icon">Match Profile Icon</string>
    <string name="match_rune_1">Match Rune 1</string>
    <string name="match_rune_2">Match Rune 2</string>
</resources>
