<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/match_type"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:textAllCaps="true"
        android:text="" />

    <TextView
        android:id="@+id/match_time_ago"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:text="" />

    <TextView
        android:id="@+id/match_result"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:text="" />

    <ImageView
        android:contentDescription="@string/match_profile_icon"
        android:id="@+id/match_profile_icon"
        android:layout_gravity="center"
        android:layout_width="46dp"
        android:layout_marginBottom="10dp"
        android:layout_height="46dp" />

    <LinearLayout
        android:layout_width="100dp"
        android:layout_height="22dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <ImageView
        android:id="@+id/match_summoner_spell_1"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:contentDescription="@string/match_summoner_spell_1" />

        <ImageView
            android:id="@+id/match_summoner_spell_2"
            android:layout_weight="1"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_gravity="center"
            android:contentDescription="@string/match_summoner_spell_2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="100dp"
        android:layout_height="22dp"
        android:layout_gravity="center"
        android:layout_marginBottom="40dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/match_rune_1"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="@string/match_rune_1" />

        <ImageView
            android:id="@+id/match_rune_2"
            android:layout_weight="1"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_gravity="center"
            android:contentDescription="@string/match_rune_2" />

    </LinearLayout>

    <TextView
        android:id="@+id/match_final_level"
        android:layout_width="200dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="" />

    <TextView
        android:id="@+id/match_final_cs"
        android:layout_width="200dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:text="" />

    <TextView
        android:id="@+id/match_kp"
        android:layout_width="200dp"
        android:layout_gravity="center"
        android:layout_marginBottom="40dp"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:text="" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/match_item_1"
            android:layout_weight="1"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_gravity="center"
        />

        <ImageView
            android:id="@+id/match_item_2"
            android:layout_weight="1"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_gravity="center"
            />

        <ImageView
            android:id="@+id/match_item_3"
            android:layout_weight="1"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_gravity="center"
            />

        <ImageView
            android:id="@+id/match_item_4"
            android:layout_weight="1"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_gravity="center"
            />

        <ImageView
            android:id="@+id/match_item_5"
            android:layout_weight="1"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_gravity="center"
            />

        <ImageView
            android:id="@+id/match_item_6"
            android:layout_weight="1"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_gravity="center"
            />

        <ImageView
            android:id="@+id/match_item_trinket"
            android:layout_weight="1"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_gravity="center"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp">
                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="match_parent"
                    android:id="@+id/match_player_1_image"/>

                <TextView
                    android:paddingLeft="10dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingRight="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/match_player_1_name"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp">
                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="match_parent"
                    android:id="@+id/match_player_2_image"/>

                <TextView
                    android:paddingLeft="10dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingRight="10dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:id="@+id/match_player_2_name"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp">
                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="match_parent"
                    android:id="@+id/match_player_3_image"/>

                <TextView
                    android:paddingLeft="10dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingRight="10dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:id="@+id/match_player_3_name"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp">
                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="match_parent"
                    android:id="@+id/match_player_4_image"/>

                <TextView
                    android:paddingLeft="10dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingRight="10dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:id="@+id/match_player_4_name"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp">
                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="match_parent"
                    android:id="@+id/match_player_5_image"/>

                <TextView
                    android:paddingLeft="10dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingRight="10dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:id="@+id/match_player_5_name"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp">
                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="match_parent"
                    android:id="@+id/match_player_6_image"/>

                <TextView
                    android:paddingLeft="10dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingRight="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/match_player_6_name"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp">
                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="match_parent"
                    android:id="@+id/match_player_7_image"/>

                <TextView
                    android:paddingLeft="10dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingRight="10dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:id="@+id/match_player_7_name"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp">
                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="match_parent"
                    android:id="@+id/match_player_8_image"/>

                <TextView
                    android:paddingLeft="10dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingRight="10dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:id="@+id/match_player_8_name"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp">
                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="match_parent"
                    android:id="@+id/match_player_9_image"/>

                <TextView
                    android:paddingLeft="10dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingRight="10dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:id="@+id/match_player_9_name"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp">
                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="match_parent"
                    android:id="@+id/match_player_10_image"/>

                <TextView
                    android:paddingLeft="10dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingRight="10dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:id="@+id/match_player_10_name"/>
            </LinearLayout>
    </LinearLayout>

    </LinearLayout>
</LinearLayout>